<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10sp"
    tools:context=".SignUp"
    android:fitsSystemWindows="true"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:src="@drawable/logoandname"
        android:layout_weight="0.4"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:paddingHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        app:boxBackgroundColor="#3CDFFF"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginBottom="25dp"
        app:startIconDrawable="@drawable/man_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/man_icon" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/e_mail"
        app:boxBackgroundColor="#3CDFFF"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginBottom="25dp"
        app:startIconDrawable="@drawable/man_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/man_icon" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_password"
        app:boxBackgroundColor="#3CDFFF"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginBottom="25dp"
        app:startIconDrawable="@drawable/password_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/cPass"
        app:boxBackgroundColor="#3CDFFF"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="25dp"
        app:startIconDrawable="@drawable/password_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/createAcc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/font_color"
        android:textStyle="bold"
        android:backgroundTint="@color/button_color"
        android:fontFamily="monospace"
        android:text="@string/sign_up"
        android:gravity="center"/>

</LinearLayout>